--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -22,6 +23,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
