--- a/package.json
+++ b/package.json
@@ -28,10 +28,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.25.0",
     "@expo/cli": "^0.22.26",
     "@types/react": "~18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react": "^7.37.5",
     "expo": "^52.0.46",
-    "typescript": "^5.1.3"
+    "globals": "^16.0.0",
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^8.30.1"
   },
   "private": true
 }
