quiz and lots of other changes

--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-firebase/firestore": "^21.14.0",
     "@types/react-native-snap-carousel": "^3.8.11",
     "expo-font": "~13.0.4",
+    "expo-intent-launcher": "~12.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
@@ -20,11 +25,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^1.3.1",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,10 +41,12 @@
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
+    "dotenv": "^16.5.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
     "expo": "^52.0.46",
     "globals": "^16.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.3",
     "typescript-eslint": "^8.30.1"
   },
