--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-image-picker": "~16.0.6"
+    "expo-image-picker": "~16.0.6",
+    "expo-dev-client": "~5.0.20",
+    "expo": "~52.0.46"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
