--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "expo": "~52.0.46",
+    "expo-config-plugins": "^0.1.2",
+    "expo-dev-client": "~5.0.20",
+    "expo-file-system": "~18.0.12",
+    "expo-file-viewer": "^0.1.0",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-intent-launcher": "~12.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -31,10 +37,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image-picker": "~16.0.6",
-    "expo-dev-client": "~5.0.20",
-    "expo": "~52.0.46"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
