--- a/app.json
+++ b/app.json
@@ -33,7 +33,13 @@
     "web": {
       "favicon": "./assets/daiem-logo.png"
     },
-    "plugins": ["expo-router", "expo-font"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-asset",
+      "@config-plugins/react-native-blob-util",
+      "@config-plugins/react-native-pdf"
+    ],
     "scheme": "daiem",
     "extra": {
       "eas": {
