--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo": "~53.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
