--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "dependencies": {
     "@config-plugins/react-native-blob-util": "^9.0.0",
@@ -18,6 +19,7 @@
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "expo": "^52.0.46",
     "expo-asset": "~11.0.5",
     "expo-config-plugins": "^0.1.2",
     "expo-dev-client": "~5.0.20",
@@ -44,8 +46,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo": "~53.0.7"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -54,10 +55,11 @@
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
+    "ajv": "^8.17.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
-    "expo": "^53.0.6",
+    "expo": "^52.0.0",
     "globals": "^16.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.3",
