--- a/package.json
+++ b/package.json
@@ -6,47 +6,24 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
-    "eas-build-pre-install": "npm config set legacy-peer-deps true"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@config-plugins/react-native-blob-util": "^9.0.0",
-    "@config-plugins/react-native-pdf": "^9.0.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-firebase/app": "^21.14.0",
-    "@react-native-firebase/auth": "^21.14.0",
-    "@react-native-firebase/firestore": "^21.14.0",
-    "@types/react-native-snap-carousel": "^3.8.11",
-    "expo": "^52.0.46",
-    "expo-asset": "~11.0.5",
-    "expo-config-plugins": "^0.1.2",
-    "expo-dev-client": "~5.0.20",
-    "expo-file-system": "~18.0.12",
-    "expo-file-viewer": "^0.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo": "~52.0.46",
     "expo-font": "~13.0.4",
-    "expo-image-picker": "~16.0.6",
-    "expo-intent-launcher": "~12.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
-    "expo-screen-orientation": "~8.1.5",
     "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-file-viewer": "^2.1.5",
     "react-native-paper": "^5.12.3",
     "react-native-pdf": "^6.7.7",
-    "react-native-pdf-renderer": "^1.6.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-snap-carousel": "^1.3.1",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -55,11 +32,10 @@
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
-    "ajv": "^8.17.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
-    "expo": "^52.0.0",
+    "expo": "^52.0.46",
     "globals": "^16.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.3",
